# docagent

./: .gitignore  README.md  pyproject.toml
samples/: broadcast.txt  currently.txt  policy.txt  thesis_excerpt.txt
src/autoscribe/: __init__.py  agents.py  backends.py  chunking.py  cli.py  config.py  errors.py  formatting.py  input.py  models.py  orchestrator.py  prompts.py  registry.py  storage.py
src/docagent/: __init__.py  agents.py  backends.py  chunking.py  cli.py  config.py  errors.py  formatting.py  input.py  orchestrator.py  prompts.py  registry.py  storage.py
src/docagent/prompt_templates/: __init__.py  agent_system.md  classifier_system.md  classifier_user.md
src/docagent/prompt_templates/agents/: broadcast_summary.md  critique_caveat.md  default.md  generic_summary.md  output_formatter.md  policy_summary.md  structure_mapper.md  thesis_summary.md
tests/: test_agents.py  test_backends.py  test_formatting.py  test_input_chunking.py  test_pipeline.py  test_prompts.py
